# simple-back

./: .buildinfo  .flake8  .gitignore  .readthedocs.yml  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: pull-request.yml  python-package.yml
_modules/: index.html
_modules/simple_back/: backtester.html  data_providers.html  exceptions.html  fees.html  metrics.html  strategy.html  utils.html
_sources/adv/: data_sources.ipynb.txt
_sources/api/: simple_back.rst.txt
_sources/intro/: strategies.rst.txt
adv/: data_sources.html
api/: simple_back.html
docs/: conf.py  environment.yml  index.rst  min_example.ipynb  quickstart_nb.ipynb  requirements-docs.txt  requirements.txt  slippage.ipynb  usage_examples.ipynb
docs/adv/: data_sources.ipynb
docs/api/: simple_back.rst
docs/intro/: data.rst  data_sources.ipynb  debugging.ipynb  download  example.rst  quickstart.ipynb  quickstart.rst  quickstart_nb.ipynb  slippage.ipynb
docs/scripts/: replace_nbsphinx_ref.py
examples/: JNUG 20-day Crossover.ipynb  Price Providers.ipynb  Untitled.ipynb  quickstart.py  usage_examples.ipynb  wikipedia-getter.ipynb
intro/: data.html  debugging.html  example.html  fees.html  fees.ipynb  quickstart.html  quickstart.ipynb  slippage.html  strategies.html
simple_back/: __init__.py  backtester.py  data_providers.py  exceptions.py  fees.py  metrics.py  price_providers.py  strategy.py  utils.py
tests/: test_simple_back.py
