[tool.poetry]
name = "simple-back"
version = "0.3.0"
description = ""
authors = ["Christoph Minixhofer <christoph.minixhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
yahoo_fin = "^0.8.5"
requests_html = "^0.10.0"
pandas = "^1.0.3"
pandas_market_calendars = "^1.3.5"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"