[tool.poetry]
name = "simple-back"
version = "0.6.1"
description = "A backtester with minimal setup and sensible defaults."
authors = ["Christoph Minixhofer <christoph.minixhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
yahoo_fin = "^0.8.5"
requests_html = "^0.10.0"
pandas = "^1.0.3"
pandas_market_calendars = "^1.3.5"
numpy = "^1.18.4"
diskcache = "^4.1.0"
pytz = "^2020.1"
beautifulsoup4 = "^4.9.1"
memoization = "^0.3.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
black = "^19.10b0"
dephell = "^0.8.3"
IPython = "^7.15.0"
pytest-cov = "^2.9.0"
sphinx = "^3.0.4"
sphinx-rtd-theme = "^0.4.3"
sphinx-copybutton = "^0.2.11"
sphinx-autodoc-typehints = "^1.10.3"
nbsphinx = "^0.7.0"
pandoc = "^1.0.2"
pylint-badge = {git = "https://github.com/PouncySilverkitten/pylint-badge.git"}

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
